<resources>
    <string name="app_name">SDA Assign4_2022</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_fragment">One string</string>
    <string name="images_desc">Book Thumb</string>
    <string name="plc_author">Edgar Rice Burroughs</string>
    <string name="plc_title">Tarzan and the Golden Lion</string>
    <string name="border">border item</string>
    <string name="check_out">Check Out</string>
    <string name="library">library</string>
    <string name="hint_ID">Borrower ID</string>
    <string name="hint_Name">Borrower Name</string>
    <string name="hint_Email">Email Address</string>
    <string name="button_save_settings">Save Details</string>
    <string name="button_reset_settings">Reset Details</string>
    <string name="invalid_name">Please insert a valid name (no numbers allowed).</string>
    <string name="invalid_email">Please insert a valid email.</string>
    <string name="invalid_id">Please insert an id.</string>
    <string name="placeholder_bookname">Book title: </string>
    <string name="select_date">Select Date</string>
    <string name="send_order">Send Order</string>
    <string name="availability">There are no information at the moment on availability of the book. Please come to the library to verify.</string>
    <string name="not_available">"The book is not available. It was reserved for date %1$s. If more than 60 days passed from this date you can reach out and we will solicit the return of the book."</string>
    <string name="available">"The book is available."</string>
    <string name="my_library_welcome">Welcome to my library borrowing system.</string>
    <string name="drop_off_message">Book drop-off opens from 9am to 14:00 every day</string>
    <string name="setup_account_message">Please set up account settings to borrow a book</string>
    <string name="select_valid_date_message">You can\'t select a date in the past or more than 30 days in future.</string>
    <string name="summary_string">The day selected for borrowing the book %s is %s. Username: %s. ID: %s. Current time is %s. Click Send Order to confirm.</string>
    <string name="success_message">The book was reserved successfully. Please come to the library on %s of %s to retrieve your book. Happy reading!</string>
</resources>
