<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listItemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:padding="15dp">

    <ImageView
        android:id="@+id/bookImage"
        android:layout_width="92dp"
        android:layout_height="129dp"
        android:contentDescription="@string/images_desc"
        android:src="@drawable/sku10001" />

    <TextView
        android:id="@+id/authorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/bookImage"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/bookImage"
        android:fontFamily="@font/aclonica"
        android:text="@string/plc_author"
        android:textAlignment="textStart"
        android:textColor="@color/TabText"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/authorText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/bookImage"
        android:fontFamily="@font/aclonica"
        android:text="@string/plc_title"
        android:textAlignment="center"
        android:textColor="@color/TabText"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookTitle"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/check_out" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/out_button"
        android:layout_marginTop="16dp"
        android:background="@color/border_shade"
        android:contentDescription="@string/border" />

</RelativeLayout>