<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:minHeight="48dp"
    tools:context=".Settings">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#120F0F">


        <EditText
            android:id="@+id/userName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:fontFamily="@font/aclonica"
            android:hint="@string/hint_Name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/listText"
            android:textColorHint="#BF3D3D"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:fontFamily="@font/aclonica"
            android:hint="@string/hint_Email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/listText"
            android:textColorHint="#BF3D3D"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName" />

        <EditText
            android:id="@+id/borrowerID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:fontFamily="@font/aclonica"
            android:hint="@string/hint_ID"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/listText"
            android:textColorHint="#BF3D3D"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/EmailInvalid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="228dp"
            android:layout_marginBottom="12dp"
            android:text="@string/invalid_email"
            android:textAlignment="textStart"
            android:textColor="@color/errorMessage"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/borrowerID"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/button_save_settings"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/borrowerID" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="193dp"
            android:layout_height="51dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="212dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/button_reset_settings"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/borrowerID" />

        <TextView
            android:id="@+id/idInvalid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="276dp"
            android:layout_marginBottom="491dp"
            android:text="@string/invalid_id"
            android:textAlignment="textStart"
            android:textColor="@color/errorMessage"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/borrowerID"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/nameInvalid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="88dp"
            android:layout_marginBottom="2dp"
            android:text="@string/invalid_name"
            android:textColor="@color/errorMessage"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName"
            app:layout_constraintVertical_bias="0.166" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>