<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Welcome">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcome_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0D0C0C">

        <ImageView
            android:id="@+id/welcomeImage"
            android:layout_width="404dp"
            android:layout_height="485dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="208dp"
            android:contentDescription="@string/library"
            android:src="@drawable/welcome"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.96"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="298dp"
            android:layout_height="210dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="16dp"
            android:background="#8B0D0C0C"
            android:fontFamily="@font/aclonica"
            android:lineSpacingExtra="16sp"
            android:text="@string/my_library_welcome"
            android:textAlignment="center"
            android:textColor="@color/TabText"
            android:textSize="34sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/welcomeImage" />

        <TextView
            android:id="@+id/officeHours"
            android:layout_width="381dp"
            android:layout_height="46dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="208dp"
            android:background="#0D0C0C"
            android:fontFamily="@font/aclonica"
            android:text="@string/drop_off_message"
            android:textColor="@color/TabText"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>